--- a/estilo/style.css
+++ b/estilo/style.css
@@ -71,7 +71,7 @@ font-family: var(--fonte-padrao);
 max-width: 500px;
 font-size: 1.2em;
 margin: auto;
-margin-bottom: 30px;
+padding-bottom: 50px;
 padding-left: 10px;
 padding-right: 10px;
 }
@@ -152,7 +152,7 @@ main h1 {
     color: var(--cor5);
     font-family: var(--fonte-android);
     font-weight: normal;
-    font-size: 1.8px;
+    font-size: 1.8em;
 }
 
 
